--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <h1>
-    {{title}}
+    Counter
 </h1>
 
 <p>Counter: {{ count | async }}</p>
+<p>LastUpdated: {{ (lastUpdated | async) | date:'mediumTime' }}</p>
 <button (click)="increment()">Increment</button>
+<button (click)="decrement()">Decrement</button>
+<button (click)="reset()">Reset</button>
+
+<ngr-user-list></ngr-user-list>
