--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,34 @@
-<h1>
-    Counter
-</h1>
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
+    <button class="navbar-toggler navbar-toggler-right" type="button" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    <a class="navbar-brand" href="#">Admin</a>
 
-<p>Counter: {{ count | async }}</p>
-<p>LastUpdated: {{ (lastUpdated | async) | date:'mediumTime' }}</p>
-<button (click)="increment()">Increment</button>
-<button (click)="decrement()">Decrement</button>
-<button (click)="reset()">Reset</button>
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <button class="btn btn-outline-primary my-2 my-sm-0" (click)="auth.login()" *ngIf="!auth.authenticated()">Log In</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0" (click)="auth.logout()" *ngIf="auth.authenticated()">Log Out</button>
+        </form>
+    </div>
+</nav>
+<div class="container fixed-navbar-top">
 
-<ngr-user-list></ngr-user-list>
+    {{ userProfile | json }}
+
+    <div class="row">
+        <div class="col-6">
+            <ngr-counter></ngr-counter>
+        </div>
+        <div class="col-6">
+            <ngr-user-list></ngr-user-list>
+        </div>
+    </div>
+</div>
