--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,8 @@
         width:30px;
         border-radius: 50%;
         margin-right: 8px;
-            margin-top: -5px;
+        margin-top: -8px;
+        margin-bottom: -5px;
 
     }
 }
