work on authguard

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,7 @@
-<h2>Login</h2>
+<div class="card w-50" style="margin:auto;">
+    <div class="card-block">
+        <h3 class="card-title">Please Login</h3>
+        <p class="card-text">In order to use this application you must login.</p>
+        <a href="javascript:void(0);" (click)="login()" class="btn btn-primary">Login</a>
+    </div>
+</div>
