--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-toggleable-md bg-inverse fixed-top">
+<nav class="navbar navbar-inverse navbar-toggleable-md bg-inverse fixed-top" *ngIf="auth.authenticated()">
     <div class="container">
         <button class="navbar-toggler navbar-toggler-right" type="button" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -15,9 +15,8 @@
                     <a class="nav-link" routerLink="/counter">Counter</a>
                 </li>
             </ul>
-            <button class="btn btn-outline-primary my-2 my-sm-0" (click)="auth.login()" *ngIf="!auth.authenticated()">Log In</button>
             <div dropdown (isOpenChange)="toggled($event)" placement="bottom right">
-                <a href dropdownToggle (click)="false" *ngIf="auth.authenticated()" class="navbar-text username">
+                <a href dropdownToggle (click)="false" class="navbar-text username">
                     <img [src]="(userProfile | async)?.picture" alt="i" class="profile-picture"> {{ (userProfile | async)?.name
                     }}
                 </a>
@@ -26,12 +25,12 @@
                     <a class="dropdown-item" href="javascript:void(0);">Another action</a>
                     <a class="dropdown-item" href="javascript:void(0);">Something else here</a>
                     <div class="dropdown-divider"></div>
-                    <a href="javascript:void(0);" class="dropdown-item" (click)="auth.logout()">Log Out</a>
+                    <a href="javascript:void(0);" class="dropdown-item" (click)="logout()">Log Out</a>
                 </div>
             </div>
         </div>
     </div>
 </nav>
-<div class="container fixed-navbar-top">
+<div class="container" [ngClass]="{'fixed-navbar-top': auth.authenticated(), 'not-authenticated': !auth.authenticated()}">
     <router-outlet></router-outlet>
 </div>
