--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,18 @@
     padding-top: 5rem;
 }
 
+.not-authenticated{
+    background-color: #f1f1f1;
+    padding:30px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: auto;
+}
+
 
 .navbar {
     .username {
