--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,13 +17,10 @@
             </ul>
             <div dropdown (isOpenChange)="toggled($event)" placement="bottom right">
                 <a href dropdownToggle (click)="false" class="navbar-text username">
-                    <img [src]="(userProfile | async)?.picture" alt="i" class="profile-picture"> {{ (userProfile | async)?.name
-                    }}
+                    <img [src]="(userProfile | async)?.picture" alt="i" class="profile-picture"> {{ (userProfile | async)?.name}}&nbsp;<i class="fa fa-caret-down"></i>
                 </a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right">
                     <a class="dropdown-item" href="javascript:void(0);" class="dropdown-item" routerLink="/profile">Profile</a>
-                    <a class="dropdown-item" href="javascript:void(0);">Another action</a>
-                    <a class="dropdown-item" href="javascript:void(0);">Something else here</a>
                     <div class="dropdown-divider"></div>
                     <a href="javascript:void(0);" class="dropdown-item" (click)="logout()">Log Out</a>
                 </div>
