--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -1,7 +1,10 @@
-<p>Error: {{ error | async }}</p>
 <ngr-loading-indicator [loading]="(loading | async)">
-  <button (click)="reload()" class="btn btn-default">Reload</button>
+  <div class="text-right">
+    <button (click)="reload()" class="btn btn-default"><i class="fa fa-refresh"></i><span class="sr-only">Reload</span></button>
+  </div>
+  <p class="text-danger" *ngIf="(error | async)">Error: {{ error | async }}</p>
+  <br>
   <div *ngFor="let user of users | async">
-    <pre>{{ user | json }}</pre>
+    <ngr-user-card [user]="user" [size]="size"></ngr-user-card>
   </div>
 </ngr-loading-indicator>
